# ChatWithDB

./: .gitignore  Dockerfile  README.md  main.py  packages.txt  pyproject.toml  requirement.txt  requirements.txt
app/helpers/: db_connector.py  llm_helper.py  query_runner.py  session_helper.py
app/models/: schema_info_model.py
app/prompts/: sql_prompt.py  summary_prompt.py
app/streamlit/: streamlit_app.py
