[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.30",
    "mongoengine>=0.29.1",
    "mysqlclient>=2.2.7",
    "oracledb>=3.3.0",
    "pg8000>=1.31.5",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
]
