[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-cerebras>=0.5.0",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "mysqlclient>=2.2.7",
    "oracledb>=3.3.0",
    "pg8000>=1.31.5",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit==1.40.0",
]
